--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="hero"></div>
 
     <!--Three main keypoints section-->
-    <section class="content">
+    <main>
         <!--search engine optimization pic on left paragraph on right-->
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -56,9 +56,9 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
-    </section>
+    </main>
     <!--page right content-->
-    <section class="benefits">
+    <aside class="benefits">
         <!--Lead generation picture and paragraph-->
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -83,7 +83,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
-    </section>
+    </aside>
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
